# clawforce

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  package.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release-bridge.yml
bridges/whatsapp/: package-lock.json  package.json
bridges/zalo/: package-lock.json  package.json
clawbot/core/: admin.py  software.py
clawbot/worker/: lifespan.py
clawforce/: README.md
clawforce-ui/: index.html  package-lock.json  package.json
clawforce/apis/: mcp_registry.py  plan_templates.py  plans.py  skills.py  software.py  users.py
clawforce/static/: index.html
clawlib/config/: schema.py
clawlib/mcpregistry/: official_mcp.py
clawlib/registry/: factory.py  protocols.py
clawlib/skillregistry/: __init__.py  yaml_catalog.py
deploy/: Dockerfile  entrypoint.sh
docs/: index.md
docs/.vitepress/: config.mts
docs/guide/: channels.md  configuration.md  guardrails-defenseclaw.md  plans.md  principles.md  quickstart.md  reverse-proxy.md  security.md
docs/reference/: terminology.md
marketplace/plan-templates/: catalog.yaml
marketplace/roles/: README.md
scripts/: dev.sh  install.cmd  install.ps1  install.sh  specops
specialagent/: README.md  __init__.py  cli.py  pyproject.toml
specialagent/agent/: __init__.py  agent_fs.py  approval.py  consolidator.py  context.py  memory.py  runtime.py  security.py  skills.py  subagent.py
specialagent/agent/loop/: __init__.py  core.py  guardrails.py  mcp.py  session.py  tools.py
specialagent/agent/tools/: __init__.py  a2a.py  base.py  cron.py  filesystem.py  mcp.py  message.py  plan.py  policy.py  registry.py  shell.py  software_exec.py  spawn.py  utils.py  web.py
specialagent/core/: __init__.py  admin.py  connection_config.py  evaluator.py  heartbeat.py  logging.py  session.py  software.py  utils.py
specialagent/core/config/: __init__.py  engine.py  loader.py  sanitize.py  schema.py
specialagent/core/cron/: __init__.py  service.py
specialagent/providers/: __init__.py  base.py  chatgpt_provider.py  custom_provider.py  fault_tolerance.py  litellm_provider.py  openai_codex_provider.py  registry.py  schema_compat.py  transcription.py
specialagent/skills/: README.md
specialagent/skills/cron/: SKILL.md
specialagent/skills/memory/: SKILL.md
specialagent/skills/summarize/: SKILL.md
specialagent/skills/tmux/: SKILL.md
specialagent/skills/tmux/scripts/: find-sessions.sh
specialagent/templates/: __init__.py  resolver.py
specialagent/templates/default/profile/: AGENTS.md  TOOLS.md
specialagent/templates/default/profile/config/: agent.yaml
specialagent/worker/: __init__.py  app.py  context.py  lifespan.py  provision.py  resolve.py  runtime.py
specialagent/worker/handlers/: __init__.py  admin.py  config.py  filesystem.py  skill.py  software.py
specops/: README.md  __init__.py  app.py  auth.py  cli.py  deps.py  oauth_callback_server.py  pyproject.toml
specops-ui/: index.html  package-lock.json  package.json  vite.config.ts
specops/apis/: __init__.py  api_tools.py  auth.py  config.py  control.py  executions.py  llm_providers.py  logs.py  mcp_registry.py  plan_templates.py  plan_workspace.py  plans.py  providers.py  shares.py  skills.py  software.py  terminal.py  users.py  webhooks.py  workspace.py
specops/apis/agents/: __init__.py  _schemas.py  a2a.py  crud.py  templates.py
specops/core/: __init__.py  acp.py  audit.py  authz.py  database.py  path_utils.py  plan_access.py  providers_resolve.py  secrets.py  stream_token.py  ws.py
specops/core/domain/: __init__.py  agent.py  plan.py  runtime.py  share.py
specops/core/runtimes/: __init__.py  _worker_runtime.py  docker.py  factory.py  local.py
specops/core/services/: __init__.py  workspace_service.py
specops/core/storage/: __init__.py  project_data.py
specops/core/store/: __init__.py  activity_events.py  agent_config.py  agent_variables.py  agents.py  base.py  execution_events.py  llm_providers.py  plan_artifacts.py  plan_workspace.py  plans.py  process_logs.py  shares.py  users.py
specops/middleware/: __init__.py  rate_limit.py
specops/static/: index.html
specops/static/assets/: index-D73RzopQ.js  index-TzLhXo5o.css  index-uHoyfr29.js
specops_lib/: README.md  __init__.py  activity.py  bus.py  http.py  pyproject.toml
specops_lib/channels/: __init__.py  base.py  discord.py  email.py  feishu.py  manager.py  slack.py  teams.py  telegram.py  whatsapp.py  zalo.py  zalouser.py
specops_lib/config/: __init__.py  helpers.py  loader.py  schema.py
specops_lib/execution/: journal.py
specops_lib/guardrails/: __init__.py  defenseclaw.py
specops_lib/mcpregistry/: __init__.py  client.py  models.py  official_mcp.py  yaml_catalog.py
specops_lib/observability/: __init__.py  defenseclaw_audit.py
specops_lib/plantemplateregistry/: __init__.py
specops_lib/registry/: __init__.py  factory.py
specops_lib/skillregistry/: __init__.py  skills_sh.py  yaml_catalog.py
specops_lib/softwareregistry/: __init__.py  yaml_catalog.py
specops_lib/storage/: __init__.py  base.py  local.py  s3.py
tests/: __init__.py  test_agent_config_store.py  test_agent_variables_store.py  test_clawforce_domain.py  test_clawforce_multiuser.py  test_control_plane.py  test_crud_overrides.py  test_custom_agent_templates.py  test_defenseclaw_audit.py  test_docker.sh  test_guardrails_defenseclaw.py  test_guardrails_engine_swap.py  test_llm_provider_store.py  test_plan_review.py  test_plan_templates.py  test_providers_resolve.py  test_self_hosted_mcp_servers.py  test_self_hosted_skills.py  test_specialagent_bus.py  test_specialagent_channels.py  test_specialagent_providers.py  test_specialagent_session.py  test_specialagent_tools.py  test_specops_api.py  test_specops_auth.py  test_specops_domain.py  test_specops_lib_activity.py  test_specops_lib_config.py  test_specops_lib_http.py  test_specops_lib_storage.py  test_specops_multiuser.py  test_specops_runtime.py  test_specops_services.py
(+201 files in other folders)
